--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.profiles.active=test
 
 default.sender=giovandrofabiosantos@hotmail.com
 default.recipient=giovandrofabiosantos@hotmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
+#jwt.expiration=86400000
