--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ default.sender=giovandrofabiosantos@hotmail.com
 default.recipient=giovandrofabiosantos@hotmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
-#jwt.expiration=86400000
+#jwt.expiration=60000
+jwt.expiration=86400000
