--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ default.recipient=giovandrofabiosantos@hotmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 #jwt.expiration=60000
 jwt.expiration=86400000
+
+#Aumentando tamanho máximo de upload de arquivos do spring
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
