--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ jwt.expiration=86400000
 #Aumentando tamanho máximo de upload de arquivos do spring
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
